@@ -1,6 +1,16 @@
-rm -f *.class
+#! /bin/bash
+set -e
+
+cd ${CYBER_DOJO_SANDBOX}
+
 CLASSES=.:`ls /approval/*.jar | tr '\n' ':'`
-javac -Xlint:unchecked -cp $CLASSES *.java
-if [ $? -eq 0 ]; then
-  java -cp $CLASSES org.junit.runner.JUnitCore `ls -1 *Test*.class | sed 's/\(.*\)\..*/\1/'`
+
+if javac --enable-preview --release 14 -Xlint:preview -Xlint:unchecked -Xlint:deprecation -cp $CLASSES *.java; then
+  java --enable-preview -jar /approval/junit-platform-console-standalone-1.6.2.jar \
+      --disable-banner \
+      --disable-ansi-colors \
+      --details=tree \
+      --details-theme=ascii \
+      --class-path .:$CLASSES \
+      --scan-class-path
 fi
